<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_id" translatable="false">net.calvuz.qdue</string>
    <string name="app_name" translatable="false">Q-Due</string>
    <string name="ok" translatable="false">OK</string>
    <string name="app_desc">Worker e-Shifts</string>
    <string name="app_about">Applicazione per la gestione dei turni di lavoro 4–2</string>
    <string name="app_libraries">Librerie utilizzate</string>
    <string name="app_libraries_used">• Android Support Library\n• Material Design Components\n• Navigation Component</string>
    <string name="app_author_str">Autore</string>
    <string name="app_author_str_name" translatable="false">calvuzs3</string>
    <string name="settings_header">Impostazioni QDue</string>
    <string name="settings_team_header">Team</string>
    <string name="settings_team_title">Team</string>
    <string name="settings_team_summary">Scegli il tuo team</string>
    <string name="pref_default_user_team" translatable="false">0</string>
    <string name="settings_show_header">Mostra</string>
    <string name="settings_show">Mostra</string>
    <string name="settings_show_stops_title">Mostra fermate</string>
    <string name="settings_show_stops_sumon">Mostra le fermate di stabilimento</string>
    <string name="settings_show_stops_sumoff">Non mostrare fermate</string>
    <string name="settings_advanced_header">Avanzate</string>
    <string name="settings_scheme_date_title">[sys] Data inizio schema</string>
    <string name="settings_scheme_date_summary">Scegli la data in cui lo schema comincia</string>
    <string name="settings_messages_header">Messaggi</string>
    <string name="settings_messages_signature_title">La tua firma</string>
    <string name="settings_sync_header">Sincronizza</string>
    <string name="settings_sync_title">Sincronizza periodicamente</string>
    <string name="qd_preference_scheme_start_day" translatable="false">preference_scheme_start_day</string>
    <string name="qd_preference_scheme_start_month" translatable="false">preference_scheme_start_month</string>
    <string name="qd_preference_scheme_start_year" translatable="false">preference_scheme_start_year</string>
    <string name="scheme_date_warning_title">Attenzione: Modifica Data Schema</string>
    <string name="scheme_date_warning_message">La data di inizio schema influenza significativamente la rotazione dei turni.\n\nSi consiglia di:\n• Accettare la data proposta inizialmente (07/11/2018)\n• Modificare solo se necessario\n• Verificare i turni dopo la modifica\n\nVuoi procedere?</string>
    <string name="scheme_date_current_label">Data attuale: %1$s</string>
    <string name="scheme_date_proceed">Procedi</string>
    <string name="scheme_date_cancel">Annulla</string>
    <string name="scheme_date_confirm_title">Conferma Modifica</string>
    <string name="scheme_date_confirm_message">Nuova data inizio schema: %1$s\n\nQuesta modifica rigenererà immediatamente tutto lo schema dei turni. Sei sicuro?</string>
    <string name="scheme_date_confirm_yes">Conferma</string>
    <string name="scheme_date_confirm_no">Annulla</string>
    <string name="scheme_date_success">Schema aggiornato con successo</string>
    <string name="scheme_date_error">Errore durante l\'aggiornamento dello schema</string>
    <string name="scheme_date_rollback">Ripristinata data precedente a causa di errore</string>
    <string name="settings_scheme_date_current">Data corrente: %1$s</string>
    <string name="settings_theme_title">Tema</string>
    <string name="settings_theme_summary">Scegli il tema dell\'applicazione</string>
    <string-array name="theme_entries">
        <item>Sistema</item>
        <item>Chiaro</item>
        <item>Scuro</item>
    </string-array>
    <string-array name="theme_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="menu_dayslist">Tutti Turni</string>
    <string name="menu_calendar">Turno</string>
    <string name="menu_title_about" translatable="false">Info</string>
    <string name="menu_title_settings">Impostazioni</string>
    <string name="menu_title_events">Eventi</string>
    <string name="nav_header_settings">Impostazioni</string>
    <string name="nav_header_advanced_settings">Impostazioni Sistema</string>
    <string name="nav_header_other">Altro</string>
    <string name="nav_header_calendars">Visuale</string>
    <string name="nav_header_desc">Menu QDue</string>
    <string name="navigation_drawer_open">Apri il cassetto menu</string>
    <string name="navigation_drawer_close">Chiudi il cassetto menu</string>
    <string name="button_left">Precedente</string>
    <string name="button_right">Successivo</string>
    <string name="action_settings">Impostazioni</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="fab_go_to_today_description">Vai alla data odierna</string>
    <string name="header_day">Nr</string>
    <string name="header_weekday">Giorno</string>
    <string name="header_morning">M</string>
    <string name="header_afternoon">P</string>
    <string name="header_night">N</string>
    <string name="header_off">-</string>
    <string name="shift_settings_title">Impostazioni Turni</string>
    <string name="shift_count_title">Numero di turni</string>
    <string name="shift_count_summary">Seleziona il numero di turni per giorno</string>
    <string name="shift_types_title">Configurazione turni</string>
    <string name="shift_name_hint">Nome turno</string>
    <string name="shift_description_hint">Descrizione turno</string>
    <string name="shift_start_time">Ora di inizio</string>
    <string name="shift_duration">Durata</string>
    <string name="shift_color">Colore</string>
    <string name="qd_preference_user_team" translatable="false">preference_user_team</string>
    <string name="qd_preference_scheme_start_date" translatable="false">preference_scheme_start_date</string>
    <string name="menu_user_profile">Profilo Utente</string>
    <string name="settings_events_header">Configurazione Eventi</string>
    <string name="settings_events_enable_title">Abilita Eventi</string>
    <string name="settings_events_enable_summary">Mostra eventi nel calendario e nella lista turni</string>
    <string name="settings_events_show_calendar_title">Mostra nel Calendario</string>
    <string name="settings_events_show_calendar_summary">Visualizza eventi nella vista calendario</string>
    <string name="settings_events_show_dayslist_title">Mostra nella Lista</string>
    <string name="settings_events_show_dayslist_summary">Visualizza eventi nella lista turni giornaliera</string>
    <string name="settings_events_external_header">Fonti Esterne</string>
    <string name="settings_events_url_title">URL Pacchetto Eventi</string>
    <string name="settings_events_url_summary">Inserisci l\'URL per scaricare pacchetti di eventi</string>
    <string name="settings_events_url_dialog_title">URL Pacchetto Eventi</string>
    <string name="settings_events_url_dialog_message">Inserisci l\'URL HTTPS del pacchetto eventi in formato JSON</string>
    <string name="settings_events_package_id_title">ID Pacchetto</string>
    <string name="settings_events_package_id_summary">Identificativo univoco per il tracking degli aggiornamenti</string>
    <string name="settings_events_package_id_dialog_title">ID Pacchetto</string>
    <string name="settings_events_ssl_title">Validazione SSL</string>
    <string name="settings_events_ssl_summary">Verifica certificati SSL per connessioni sicure</string>
    <string name="settings_events_update_title">Aggiorna Manualmente</string>
    <string name="settings_events_update_summary">Scarica ora gli aggiornamenti dal server</string>
    <string name="settings_events_last_update_title">Ultimo Aggiornamento</string>
    <string name="settings_events_last_update_summary">Nessun aggiornamento effettuato</string>
    <string name="settings_events_google_header">Google Calendar</string>
    <string name="settings_events_google_title">Integrazione Google Calendar</string>
    <string name="settings_events_google_summary">Importa eventi dai tuoi calendari Google</string>
    <string name="settings_events_google_account_title">Account Google</string>
    <string name="settings_events_google_account_summary">Seleziona l\'account per l\'integrazione</string>
    <string name="settings_events_google_calendars_title">Calendari</string>
    <string name="settings_events_google_calendars_summary">Scegli quali calendari importare</string>
    <string name="settings_events_types_header">Tipologie Eventi</string>
    <string name="settings_events_production_stops_title">Fermate Produzione</string>
    <string name="settings_events_production_stops_summary">Mostra eventi di fermata programmata e carenza ordini</string>
    <string name="settings_events_configure_types_title">Configura Tipologie</string>
    <string name="settings_events_configure_types_summary">Personalizza colori e priorità delle tipologie eventi</string>
    <string name="settings_events_local_header">Eventi Locali</string>
    <string name="settings_events_clear_local_title">Cancella Eventi Locali</string>
    <string name="settings_events_clear_local_summary">Rimuovi tutti gli eventi salvati localmente</string>
    <string name="settings_events_export_title">Esporta Eventi</string>
    <string name="settings_events_export_summary">Salva eventi in formato JSON</string>
    <string name="settings_events_import_title">Importa Eventi</string>
    <string name="settings_events_import_summary">Carica eventi da file JSON</string>
    <string name="nav_header_about" translatable="false">Info</string>
    <string name="action_import_file">Importa da File</string>
    <string name="action_export_file">Esporta su File</string>
    <string name="action_clear_all">Pulisci tutti gli eventi</string>
    <string name="backup_restore_title">Backup &amp; Ripristino</string>
    <string name="action_manual_backup">Crea Backup adesso</string>
    <string name="action_restore_backup">Ripristina da Backup</string>
    <string name="action_auto_backup_settings">Impostazioni Auto Backup</string>
    <string name="action_backup_status">Backup Status</string>
    <string name="search_events">Cerca Eventi</string>
    <string name="update">Aggiorna</string>
    <string name="export_events">Esporta Eventi</string>
    <string name="settings">Impostazioni</string>
    <string name="settings_default_view_title">Vista predefinita</string>
    <string name="settings_default_view_summary">Scegli quale vista mostrare all\'avvio dell\'app</string>
    <string name="settings_appearance_header">Aspetto</string>
    <string name="settings_dynamic_colors_title">Colori dinamici</string>
    <string name="settings_dynamic_colors_summary">Usa i colori del tema di sistema (Android 12+)</string>
    <string name="text_validation">Validazione</string>
    <string name="text_validate_before_import">Valida prima di importare</string>
    <string name="text_show_validation_results">Mostra i risultati di validazione</string>
    <string name="text_duplicate_event">Duplica evento</string>
    <string name="text_skip_duplicate_event">Salta la duplicazione evento</string>
    <string name="text_substitute_existing_events">Sostituisci gli eventi esistenti</string>
    <string name="text_rename_duplicated_events">Rinomina gli eventi duplicati</string>
    <string name="text_import_behaviour">Comportamento di importazione</string>
    <string name="text_show_import_progress">Mostra progressi di importazione</string>
    <string name="text_keep_existing_events">Conserva gli eventi esistenti</string>
    <string name="text_allow_partial_import_on_errors">Consenti importazione parziale in caso di errori</string>
    <string name="nav_header_events">Eventi</string>
    <string name="menu_events">Eventi</string>
    <string name="go_to_today">Vai a oggi</string>
</resources>