<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Categoria originale QDue -->
    <PreferenceCategory app:title="@string/settings_header">

        <!--Squadra di appartenenza dello user        -->
        <ListPreference
            android:icon="@drawable/ic_rounded_group_24"
            app:defaultValue="@string/pref_default_user_team"
            app:entries="@array/pref_entries_user_team"
            app:entryValues="@array/pref_values_user_team"
            app:key="@string/qd_preference_user_team"
            app:title="@string/settings_team_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <!-- Categoria Aspetto e Tema -->
    <PreferenceCategory app:title="@string/settings_appearance_header">

        <!-- Default View Mode -->
        <ListPreference
            app:key="qdue_view_mode"
            app:title="@string/settings_default_view_title"
            app:summary="@string/settings_default_view_summary"
            app:entries="@array/view_mode_entries"
            app:entryValues="@array/view_mode_values"
            app:defaultValue="calendar"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_rounded_visibility_24" />

        <!-- Colori dinamici (solo per Android 12+) -->
        <SwitchPreferenceCompat
            android:icon="@drawable/ic_rounded_colors_24"
            app:defaultValue="true"
            app:key="qdue_dynamic_colors_enabled"
            app:summary="@string/settings_dynamic_colors_summary"
            app:title="@string/settings_dynamic_colors_title" />

    </PreferenceCategory>

    <!-- Categoria per le impostazioni avanzate - VERSIONE SEMPLIFICATA -->
    <PreferenceCategory app:title="@string/settings_advanced_header">

        <!-- Preferenza della data inizio schema - USA PREFERENCE STANDARD -->
        <Preference
            android:icon="@drawable/ic_rounded_edit_calendar_24"
            android:key="@string/qd_preference_scheme_start_date"
            android:singleLine="false"
            android:summary="@string/settings_scheme_date_summary"
            android:title="@string/settings_scheme_date_title" />

    </PreferenceCategory>

</PreferenceScreen>