<?xml version="1.0" encoding="utf-8"?>
<!-- res/menu/sidebar_navigation_menu.xml -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_header_calendars"
            android:title="@string/nav_header_calendars">
            <menu>
                <item
                    android:id="@+id/nav_dayslist"
                    android:icon="@drawable/ic_view_dayslist"
                    android:title="@string/menu_dayslist" />
                <item
                    android:id="@+id/nav_calendar"
                    android:icon="@drawable/ic_view_calendar"
                    android:title="@string/menu_calendar" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_header_events"
            android:title="@string/nav_header_events">
            <menu>
                <item
                    android:id="@+id/nav_events"
                    android:icon="@drawable/ic_rounded_event_list_24"
                    android:title="@string/menu_events" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_header_settings"
            android:title="@string/nav_header_settings">
            <menu>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_rounded_settings_24"
                    android:title="@string/menu_title_settings" />
            </menu>
        </item>

        <item
            android:id="@+id/nav_header_other"
            android:title="@string/nav_header_about">
            <menu>
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_rounded_info_24"
                    android:title="@string/menu_title_about" />
            </menu>
        </item>

    </group>

</menu>