<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Existing menu items -->
    <item
        android:id="@+id/action_import_file"
        android:title="@string/action_import_file"
        android:icon="@drawable/ic_file_upload"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_export_file"
        android:title="@string/action_export_file"
        android:icon="@drawable/ic_file_download"
        app:showAsAction="never" />

    <!-- NEW BACKUP/RESTORE SUBMENU -->
    <item
        android:id="@+id/action_backup_restore"
        android:title="@string/backup_restore_title"
        android:icon="@drawable/ic_backup"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/action_manual_backup"
                android:title="@string/action_manual_backup"
                android:icon="@drawable/ic_backup_create" />
            <item
                android:id="@+id/action_restore_backup"
                android:title="@string/action_restore_backup"
                android:icon="@drawable/ic_restore" />
            <item
                android:id="@+id/action_auto_backup_toggle"
                android:title="@string/action_auto_backup_settings"
                android:icon="@drawable/ic_settings_backup" />
            <item
                android:id="@+id/action_backup_status"
                android:title="@string/action_backup_status"
                android:icon="@drawable/ic_info_outline" />
        </menu>
    </item>

    <!-- Existing menu items -->
    <item
        android:id="@+id/action_clear_all"
        android:title="@string/action_clear_all"
        android:icon="@drawable/ic_clear_all"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="never" />

    <!-- DEBUG ONLY -->
    <item
        android:id="@+id/action_run_tests"
        android:title="Run System Tests"
        android:icon="@drawable/ic_bug_report"
        android:visible="false"
        app:showAsAction="never"
        tools:ignore="HardcodedText" />

</menu>