<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_dayslist"
            android:icon="@drawable/ic_view_list"
            android:title="@string/menu_dayslist" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_view_calendar"
            android:title="@string/menu_calendar" />

    </group>
    <group>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_title_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_title_about" />
    </group>
</menu>