<?xml version="1.0" encoding="utf-8"?>
<!-- Menu for EventsListFragment -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Search Events -->
    <item
        android:id="@+id/action_search_events"
        android:title="@string/search_events"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />

    <!-- Refresh Events -->
    <item
        android:id="@+id/action_refresh_events"
        android:title="@string/update"
        android:icon="@android:drawable/ic_menu_rotate"
        app:showAsAction="ifRoom" />

    <!-- Import Events -->
    <item
        android:id="@+id/action_import_events"
        android:title="@string/import_events"
        android:icon="@android:drawable/ic_input_get"
        app:showAsAction="never" />

    <!-- Export Events -->
    <item
        android:id="@+id/action_export_events"
        android:title="@string/export_events"
        android:icon="@android:drawable/ic_menu_save"
        app:showAsAction="never" />

    <!-- Settings -->
    <item
        android:id="@+id/action_events_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />

</menu>