<?xml version="1.0" encoding="utf-8"?>
<!-- res/menu/drawer_secondary_menu.xml -->
<!-- Secondary drawer menu for large landscape (advanced features) -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_account" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/ic_person"
            android:title="@string/menu_user_profile" />
    </group>

    <group android:id="@+id/group_settings" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_title_settings" />
    </group>

    <group android:id="@+id/group_info" android:checkableBehavior="none">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_title_about" />
    </group>

</menu>